@@ -107,7 +107,7 @@ ParentCamera = CameraTemplate; NB: This will set the object as a child of the sp
 UseParentSpace = true|false; NB: If set to true and has a valid parent, its position and scale will be considered in parent's space, ie. [0-1] defines parent size on each axis. Defaults to true;
 
 [GraphicTemplate]
-Texture = path/to/ImageFile.ext; NB: If provided, text data will be ignored;
+Texture = path/to/ImageFile.ext; NB: If provided, text data will be ignored. If the value is 'pixel', a 1x1 white bitmap with full opacity will be used.
 TextureCorner = [Vector]; NB: Top left corner, z is ignored. This will be ignored for text data;
 TextureSize = [Vector]; NB: Texture size, z is ignored. This will be ignored for text data;
 Text = TextTemplate; NB: Will be ignored if a valid texture is provided;
