@@ -13,6 +13,7 @@ orx 1.2
 * IMPORTANT: Added new plugins for embedded versions: SDL plugins for win/linux (35-40% than the SFML ones) and GLFW plugins for win/linux/osx (~2% faster than SDL ones).
 * IMPORTANT: Added an OpenAL/libsndfile/stb_vorbis audio plugin as SFML audio plugin counterpart.
 * IMPORTANT: SDL & GLFW now handle per-object shaders in a correct manner: shader is only applied when the object is rendered and only on it. This behavior can't be obtained with SFML plugins.
+* IMPORTANT: Added an internal texture called "pixel" that holds a white pixel with full opacity. This can be used for all fade in/out effects and more.
 * Added automatically generated coordinates for shader textures: Texture MyTex -> MyTex_Top, MyTex_Left, MyTex_Right & MyTex_Bottom are generated by orx in a consistant way across all platforms/plugins.
 * GLFW plugins are now the default plugins for embedded mode. SFML plugins are still the only existing plugins for non-embedded mode.
 * GLFW and SDL plugins also use SOIL library for handling graphic files I/O
@@ -31,6 +32,7 @@ orx 1.2
 * Added some new orxConfig_* functions for advanced config manipulations
 * Working directory is set to executable's one for all platforms (was done only for Mac OS X before)
 * Fixed constness of all orxSTRING related code
+* Cleaner texture/bitmap deletion handling
 * Fixed FPS display position when aspect ratio is not 1:1
 * Removed a couple of warnings from external library Box2D
 * Fixed some minor issues in SFML-based sound plugin
